--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <style type="text/css">
         h1{
             text-align: center;
-            font-size: 1px;
+            font-size: 1000px;
+            color:red;
         }
     </style>
 </head>
