--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </style>
 </head>
 <body>
-    <h1>FBI WARNING 张贵红</h1>
-    <h1>FBI WARNING 卢苾瑞</h1>   
-    <h1>FBI WARNING 高信  </h1>
+    <h1>ZEN先生的奇妙世界</h1>
+    <h1>欢迎</h1>   
+    
     </body>
 </html>
