--- a/mPAGE.html
+++ b/mPAGE.html
@@ -1,16 +1,27 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <title>QAQ</title>
-
-</head>
+    <style type="text/css">
+     h1{
+        text-align:center;
+        font-size:100px;
+        }
+        </style>
+        </head >
 <body>
-    <h1>   主页      </h1>
-    <h2>                        </h2>
-    <p>                         </p>
-    <p>                          </p>
- <a> href="Oceanblus.QAQ.io/index.html"
+    <div style="color:#7bff00">
 
+        <h1 >第一篇博客  </h1 >
+        <h2>时间：    </h2>
+    </div>
+    <div style="color:#000000">
+        <p > 我</p >
+        <p > 你</p >
+</div > 
 </body>
-</html>
+        </html >
+
+
