--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href="page.html" target="_blank">
-     第一个博客
-    </a>
-
-
+    <a href="page.html" target="_blank">第一个博客</a>
+     
+  
 </body>
 </html>
