--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href="https://oceanblus.github.io/Oceanblus.QAQ.io/mPAGE.html." target="_blank">第一个博客</a>
+    <a href="https://Oceanblus.github.io/Oceanblus.QAQ.io/mPAGE.html" target="_blank">第一个博客</a>
      
   
 </body>
