--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href="https://Oceanblus.github.io/Oceanblus.QAQ.io/mPAGE.html" target="_blank">第一个博客</a>
-     
+    <a href=" https://github.com/Oceanblus/Oceanblus.QAQ.io/blob/main/mPAGE.index.html"_blank">第一个博客</a>
+    
   
 </body>
 </html>
