--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href=" https://github.com/Oceanblus/Oceanblus.QAQ.io/blob/main/mPAGE.index.html"_blank">第一个博客</a>
-</body>
+    <a href=" https://github.com/Oceanblus/Oceanblus.QAQ.io/blob/blog/mPAGE.index.html   ">第一个博客</a>
+
+                                                                                      
+                                                                                              
+    </body>
 </html>
