--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href="mPAGE.index.html ">第一个博客</a>
-
-                                                                                      
-                                                                                              
-    </body>
+    <a href=" Oceanblus.QAQ\blog\file_1029.md">第一个博客</a>                                                                                        
+</body>
 </html>
