--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href=" Oceanblus.QAQ\blog\file_1029.md">第一个博客</a>                                                                                        
+    <a href=" https://github.com/Oceanblus/Oceanblus.QAQ.io/blob/main/blog/file_1029.md">第一个博客</a>                                                                                        
 </body>
 </html>
