--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <base href="//www.oceanblus.github.io." target="_blank">
     <title>Document</title>
     <style type="text/css">
         h1 {
@@ -13,6 +14,6 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href=" blog.index.html">第一个博客</a>                                                                                        
+    <a href=" blog/index.html">第一个博客</a>                                                                                        
 </body>
 </html>
