--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <base href="//www.oceanblus.github.io." target="_blank">
+    <base href="https://oceanblus.github.io." target="_blank">
     <title>Document</title>
     <style type="text/css">
         h1 {
