--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href=" blog/index.html">第一个博客</a>                                                                                        
+    <a href=" blog/">第一个博客</a>                                                                                        
 </body>
 </html>
