--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <base href="https://oceanblus.github.io." target="_blank">
     <title>Document</title>
     <style type="text/css">
         h1 {
@@ -14,6 +13,6 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href=" blog/">第一个博客</a>                                                                                        
+    <a href=" https://oceanblus.github.io/blog/">第一个博客</a>                                                                                        
 </body>
 </html>
