--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>ZEN先生的奇妙世界</h1>
     <h1>欢迎</h1>
-    <a href=" https://oceanblus.github.io/blog/">第一个博客</a>                                                                                        
-</body>
+    <a href=" https://oceanblus.github.io/blog/ ">读书报告：如何阅读一本书</a>                                                                                        
+    <a href=" https://oceanblus.github.io/blog1/ ">作品分析：关于黑魂，光环剧情的思考</a>     
+    </body>
 </html>
