--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h1>欢迎</h1>
     <a href=" https://oceanblus.github.io/blog/ ">读书报告：如何阅读一本书</a>  
     <br>
-    <a href=" https://oceanblus.github.io/blog1/ ">作品分析：关于黑魂，光环剧情的思考</a>     
+    <a href=" https://oceanblus.github.io/blog1/ ">作品分析：关于黑魂，光环剧情的思考</a>
+    <br>
+    <a href=" https://oceanblus.github.io/blog2/ ">关于迷宫游戏的思考</a>     
     </body>
 </html>
