--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <br>
     <a href=" https://oceanblus.github.io/blog1/ ">作品分析：关于黑魂，光环剧情的思考</a>
     <br>
-    <a href=" https://oceanblus.github.io/blog2/ ">关于迷宫游戏的思考</a>     
+    <a href=" https://oceanblus.github.io/blog2/ ">关于迷宫游戏的思考</a>
+    <a href="https://oceanblus.github.io/blog3/ ">游戏系统</a>
     </body>
 </html>
