--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <a href=" https://oceanblus.github.io/blog2/ ">关于迷宫游戏的思考</a>
     <br>
     <a href="https://oceanblus.github.io/blog3/ ">游戏系统</a>
+    <br>
+    <a href="https://oceanblus.github.io/review/">复盘</a>
     </body>
 </html>
